--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-html {
+/* html {
     max-width: 1440px;
     max-height: 900px;
-}
+} */
 
 * {
     margin: 0;
@@ -11,7 +11,7 @@ html {
 
 body {
     /* max-width: 1440px; */
-    /* max-height: 900px; */
+    max-height: 900px;
     height: 900px;
     font-family: 'Outfit', sans-serif;
     font-size: 18px;
@@ -23,7 +23,7 @@ body {
 }
 
 .wrapper {
-    width: 28%;
+    width: 20%;
     height: 75%;
     border-radius: 10px;
     padding: 2rem;
