--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-/* html {
-    max-width: 1440px;
+html {
+    width: 1440px;
     max-height: 900px;
-} */
+}
 
 * {
     margin: 0;
@@ -42,7 +42,7 @@ body {
 
 
 .picture {
-    /* overflow: hidden; */
+    overflow: hidden;
     width: 100%;
     height: 55%;
     margin-bottom: 2rem;
