--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-html {
+/* html {
     width: 1440px;
     max-height: 900px;
-}
+} */
 
 * {
     margin: 0;
@@ -24,7 +24,7 @@ body {
 
 .wrapper {
     width: 20%;
-    height: 75%;
+    height: 80%;
     border-radius: 10px;
     padding: 2rem;
     background-color: hsl(216, 50%, 16%);
