--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-/* html {
+html {
     width: 1440px;
     max-height: 900px;
-} */
+}
 
 * {
     margin: 0;
@@ -23,7 +23,7 @@ body {
 }
 
 .wrapper {
-    width: 20%;
+    width: 30%;
     height: 80%;
     border-radius: 10px;
     padding: 2rem;
